<resources>
    <string name="app_name">Firebase App</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="or_sign_up">or, Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_details">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_out">Sign Out</string>
</resources>